{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 35,
  "lineage": "e2358833-e7fc-7304-e2a1-96bf035ce22f",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717279735097:internet-gateway/igw-0ee09a03ecd1a854a",
            "id": "igw-0ee09a03ecd1a854a",
            "owner_id": "717279735097",
            "tags": {
              "Environment": "Development",
              "Name": "vpc-example-igw",
              "Team": "Backend"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "vpc-example-igw",
              "Team": "Backend"
            },
            "vpc_id": "vpc-0f142aa776e0866cf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ee09a03ecd1a854a",
            "id": "r-rtb-039a235cbe044dbcd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039a235cbe044dbcd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717279735097:route-table/rtb-039a235cbe044dbcd",
            "id": "rtb-039a235cbe044dbcd",
            "owner_id": "717279735097",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "vpc-example-public-rt",
              "Team": "Backend"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "vpc-example-public-rt",
              "Team": "Backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f142aa776e0866cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.0.0/17",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00be729ecf4b264f9",
            "route_table_id": "rtb-039a235cbe044dbcd",
            "subnet_id": "subnet-02602b49a9e63270b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "10.0.128.0/17",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f3b581028d60433",
            "route_table_id": "rtb-039a235cbe044dbcd",
            "subnet_id": "subnet-0e5e82e15a5c82c89"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.0.0/17",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717279735097:subnet/subnet-02602b49a9e63270b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02602b49a9e63270b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "717279735097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "public-subnet-10.0.0.0/17",
              "Team": "Backend"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "public-subnet-10.0.0.0/17",
              "Team": "Backend"
            },
            "vpc_id": "vpc-0f142aa776e0866cf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "10.0.128.0/17",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717279735097:subnet/subnet-0e5e82e15a5c82c89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5e82e15a5c82c89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "717279735097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "public-subnet-10.0.128.0/17",
              "Team": "Backend"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "public-subnet-10.0.128.0/17",
              "Team": "Backend"
            },
            "vpc_id": "vpc-0f142aa776e0866cf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717279735097:vpc/vpc-0f142aa776e0866cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-093bf97dadbdaa5cc",
            "default_route_table_id": "rtb-07ea6ee4585248ab9",
            "default_security_group_id": "sg-00efa23c79dcf0d90",
            "dhcp_options_id": "dopt-04794775040294e2f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f142aa776e0866cf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ea6ee4585248ab9",
            "owner_id": "717279735097",
            "tags": {
              "Environment": "Development",
              "Name": "vpc-example",
              "Team": "Backend"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "vpc-example",
              "Team": "Backend"
            }
          }
        }
      ]
    }
  ]
}